
    o	[g]sub(*, perl=TRUE) now also supports '\E' in order to *end*
	\U and \L case changes, thanks to a patch from Bill Dunlap.

    o	factor(), `levels<-`(), etc, now ensure that the resulting factor
	levels are unique (as was always the implied intention).  Factors
	with duplicated levels are still constructible by low-level means,
	but are now declared illegal.
	factor() gains new optional arguments 'keepUnique' and 'digitsLabels'
	which determine the exact behavior in the case of a (non-integer)
	numeric argument.

    o	New print() (S3) method for class "function", also used for
	auto-printing.	Further, .Primitive functions now print and
	auto-print identically.  The new method is based on code
	suggestions by Romain Francois.

    o   The print() and toLatex() methods for class "sessionInfo" now
        show the locale in a nicer format and have arguments to
        suppress locale information.

    o	In addition to previously only round(), there are other 'Math'
	group (S3) methods for 'difftime', such as floor(), signif(),
	abs(), etc.

    o	For completeness, old.packages() allows 'type' to be specified
	(you could always specify 'available' or 'contriburl').

    o	available.packages() by default only returns information on
	the latest versions of packages whose version requirements are
	satisified by the currently running R: use 'duplicates = TRUE'
	to return information on all avalilable versions.


BUG FIXES

    o	sprintf() now signals an error when the result of single format
	specification would be longer than the limit (8192 bytes); it would
	return "somewhat random" results or segfault previously. (PR#13667)
	Further, arguments of type "language" or "symbol" are no longer
	allowed, as these, e.g., sprintf("%s", quote(list())), typically
	lead to unexpected results or hard to understand error messages.

    o	as(I(1), "vector") and similar coercions from objects of
	"unregistered" S3 classes now work.


